--- a/NeteaseNews/Info.plist
+++ b/NeteaseNews/Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
-	<string>Aixtuz.$(PRODUCT_NAME:rfc1034identifier)</string>
+	<string>Aixtuz.NeteaseNews</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
